# tic-tac-toe-python

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pylint.yml
backend/: pyproject.toml
backend/module-engine/: index.html
backend/module-exceptions/: index.html
backend/module-minimax/: index.html
backend/module-models/: index.html
backend/module-players/: index.html
backend/module-renderers/: index.html
backend/module-validators/: index.html
backend/src/tic-tac-toe/logic/: models.py
backend/src/tic_tac_toe/: __init__.py
backend/src/tic_tac_toe/game/: __init__.py  engine.py  players.py  renderers.py
backend/src/tic_tac_toe/logic/: __init__.py  exceptions.py  minimax.py  models.py  validators.py
console/module-args/: index.html
console/module-cli/: index.html
console/module-players/: index.html
console/module-renderers/: index.html
docs/: how-to-guides.md  index.md  reference.md
docs/backend/: module-engine.md  module-exceptions.md  module-minimax.md  module-models.md  module-players.md  module-renderers.md  module-validators.md
docs/console/: module-args.md  module-cli.md  module-players.md  module-renderers.md
explanation/: index.html
frontend/: play.py
frontend/console/: __init__.py  __main__.py  args.py  cli.py  players.py  renderers.py
how-to-guides/: index.html
reference/: index.html
src/backend/: __init__.py
src/backend/game/: __init__.py  engine.py  players.py  renderers.py
src/backend/logic/: exceptions.py  minimax.py  models.py  validators.py
src/frontend/: __init__.py  __main__.py  play.py
src/frontend/console/: __init__.py  args.py  cli.py  players.py  renderers.py
tutorials/: index.html
