[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-ldk"
version = "1.0.0"
description = "Tic tac toe game"
readme = "README.md"
authors = [{ name = "lordksix", email = "wladimir.pasquel@urp.edu.pe" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE version 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["game", "tictactoe", "minimax"]
requires-python = ">=3.11"
[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]



    [project.scripts]
    tictactoe = "frontend.__main__:main"

    [project.urls]
    repository = "https://github.com/lordksix/tic-tac-toe-python"
    documentation = "https://lordksix.github.io/tic-tac-toe-python/"

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

